<resources>
    <string name="app_name">VisiRx</string>
    <string name="title_activity_home">  Dashboard</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="saveinTool">Home</string>
    <string name="dashboard">Home</string>
    <string name="Bookapt">Book Appointment</string>
    <string name="AppointmentDetails">Appointment Details</string>
    <string name="addDoctor">Find Doctor</string>
    <string name="MyProfile">Profile</string>
    <string name="invite_doctors">Invite Doctors</string>
    <string name="help">About</string>
    <string name="doctorprofile">Doctor Profile</string>
    <string name="version">Version                       2.5.2</string>
    <string name="logout">Log Out</string>
    <string name="PERMISSION_DENIED">Storage permissions denied !</string>
    <string name="ID">VisiRx ID</string>
    <string name="delete">Do you want delete this image ?</string>
    <string name="dashboard_action">Home</string>
    <string name="Bookapt_action">Book Appointments</string>
    <string name="appoint_summary">Appointment Summary</string>
    <string name="Payment_pending">Payment</string>
    <string name="addDoctor_action">Find Doctor</string>
    <string name="MyProfile_action">My Profile</string>
    <string name="help_action">About</string>
    <string name="invite_doctors_action">Invite Doctors</string>
    <string name="appoint_Details">Appointment Details</string>
    <string name="openDrawer">Navigation Open</string>
    <string name="closeDrawer">Navigation Close</string>
    <string name="emr_saved_sucessfully">EMR File saved sucessfully</string>
    <string name="emrInfo">No More EMR Data</string>
    <string name="pres_camera">Add Prescription</string>
    <string name="pres_title">Pres</string>
    <string name="pres_time">05:30 PM</string>
    <string name="visirx_pharmacy">Do you want send the prescription to VisiRx Pharmacy ?</string>
    <string name="patient_info">No More Patient</string>
    <string name="emrData">No More EMR Data</string>
    <string name="notesData">No More Notes</string>
    <string name="prescriptionData">No More Prescription</string>
    <string name="No_more_prescriotion">No more prescription</string>
    <string name="emr_apmnt_id">App Id :</string>
    <string name="emr_date">Feb 10, 2016</string>
    <string name="emr_title">AUSCULTATION</string>
    <string name="emr_subtitle">5 Reports</string>
    <string name="no_doctor">No More Doctor to Display</string>
    <string name="explain_symptoms">Explain Your Symptoms</string>
    <string name="symptom_hint">Describe with minimum 50 Characters</string>
    <string name="select_mode">Select mode of consult *</string>
    <string name="virtual">Virtual</string>
    <string name="walkin">Walk-in</string>
    <string name="virtual_consult">Virtual consult helps you consult doctor from your place</string>
    <string name="slots_available"> Available Token. :</string>
    <string name="today_date">Today 25, Feb 2016</string>
    <string name="proceed">PROCEED</string>
    <string name="backward"> &lt;</string>
    <string name="forward">&gt;</string>
    <string name="next_token">NEXT TOKEN AVAILABLE</string>
    <string name="apmnt_history_date">10-Feb-2016</string>
    <string name="apmnt_history_status">Completed</string>
    <string name="search_doctor">Search by ID or Search by Name</string>
    <string name="patient_name">Scarlette Johanson</string>
    <string name="patient_summary">DOCTOR SUMMARY</string>
    <string name="time">04:00 PM</string>
    <string name="visirx_id">Visirx ID :</string>
    <string name="visirx_id_num">V100001</string>
    <string name="patient_age">34</string>
    <string name="female">Female</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="symptoms_details">A headache or cephalagia </string>
    <string name="address_caps">ADDRESS</string>
    <string name="sample_address">309, NSIC-Software Technologies Park, \n B-24,Guindy</string>
    <string name="nurse_name">Uma Thuruman</string>
    <string name="nurse_age">24</string>
    <string name="nurse_id">VP 12001</string>
    <string name="nurse_details">NURSE DETAILS</string>
    <string name="appointment_history">APPOINTMENT HISTORY</string>
    <string name="view_all_history">View All</string>
    <string name="para_name">Maria Drum</string>
    <string name="para_email">maria_drum@visirx.com</string>
    <string name="cancel_appointment">Do you want cancel this appointment?</string>
    <string name="attach_Doctor">Do you want add this Doctor?</string>
    <string name="add_docotr">Do you want add  this Doctor?</string>
    <string name="cancel_appoint">Do you want cancel this appointment?</string>
    <string name="delete_appoint">Do you want Delete this appointment?</string>
    <string name="delete_Doctor">Do you want Delete this Doctor?</string>
    <string name="Plese_enterfilename">Plese Enter File Name</string>
    <string name="dashBoardInfo">No More Patient</string>
    <string-array name="menu_array">
        <item> Dashboard</item>
        <item>Calender</item>
        <item>Earnings</item>
        <item>Invite Doctors</item>
    </string-array>
    <string-array name="planets_array">
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>
    <string-array name="planets_Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>
    <string name="wait_gcmProcess">Please Wait GCM Processed</string>
    <string name="title_activity_total_earning">TotalEarningActivity</string>
    <string name="title_activity_total_outstanding">TotalOutstandingActivity</string>
    <string name="rupes"> Fees:   \u20B9</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_notes">AddNotesActivity</string>
    <string name="error_server_connect">Unable to connect. Please ensure your mobile data connection is turned on.</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_setting">Setting</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="add_notes">ADD NOTES</string>
    <string name="call">camera</string>
    <string name="cancel">Cancel</string>
    <string name="appts_list">Appointmet List</string>
    <string name="ready">Ready</string>
    <string name="scheduled">Scheduled</string>
    <string name="no_show">No show</string>
    <string name="cancelled">Cancelled</string>
    <string name="save">Save</string>
    <string name="notes_saved_sucessfully">Notes saved sucessfully</string>
    <string name="prescription_saved_sucessfully">Prescription saved sucessfully</string>
    <string name="appointment_cancelled">Appointment cancelled sucessfully</string>
    <string name="title_activity_patient_detail">PatientDetailActivity</string>
    <string name="title_patient">Patient Profile</string>
    <string name="title_emr">Emr</string>
    <string name="title_notes">Notes</string>
    <string name="title_prescription">Prescription</string>
    <string name="title_activity_patient_tab">PatientTabActivity</string>
    <string name="title_activity_appt_history">ApptHistoryActivity</string>
    <string name="title_activity_ausculation">AusculationActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="appointment_id_">"Appointment ID : "</string>
    <string name="visirx_id_">"Visirx ID : "</string>
    <string name="title_activity_emrimage">EMRImageActivity</string>
    <string name="title_activity_emrimage_full">EMRImageFullActivity</string>
    <string name="title_activity_add_prescription">AddPrescriptionActivity</string>
    <string name="successfully_updated_fee">Successfully Updated Fee</string>
    <string name="appointment_completed">Appointment completed sucessfully</string>
    <string name="your_string_here">This is an <u>underline</u>.</string>
    <string name="complete_appointment">Do you want complete the appointment?</string>
    <string name="confirm_action">CONFIRM ACTION</string>
    <string name="doctor_details">DOCTOR DETAIL</string>
    <string name="appintment_details">APPOINTMENT DETAIL</string>
    <string name="paramedic_status">yet to be assigned</string>
    <string name="file_name">File name is missing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auscultation">Auscultation</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_vitalsign">Vital Sign</string>
    <string name="description">Description</string>
    <string name="hello_world">Hello world!</string>
    <string name="recoverymail">Recovery mail address</string>
    <string name="begin">Your appointment will begin between</string>
    <string name="infotext">We will hold your appointment request for 25 minutes while you answer a few question.</string>
    <string name="visit_purpose">Please briefly describe the purpose of your visit:</string>
    <string name="time_period">When did you start feeling this way?</string>
    <string name="me">Me</string>
    <string name="myhealth">My Health</string>
    <string name="appointment">Appointments</string>
    <string name="medication_text">Please tell us if you are currently taking any medications,and if so,how long?</string>
    <string name="spinner_title">The past week</string>
    <string name="spinner_gender">Gender</string>
    <string name="spinner_blood">Blood Group</string>
    <string name="allergies">Please tell us any allergies you have: </string>
    <string name="medical_condition">Please let us know if you have any medical conditions. Tap all that apply.</string>
    <string name="child">Who is the patient?</string>
    <string name="couponmsg">Do you have coupon code to use with Ready Doctor? </string>
    <string name="ondemand">On Demand</string>
    <string name="signup">Sign Up</string>
    <string name="meetus">Meet Us</string>
    <string name="email_hint">Email Address</string>
    <string name="pass_hint">Password</string>
    <string name="iforgot_text">I Forgot My Password</string>
    <string name="name">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="iagree">I agree to Doctor on Demands\'s</string>
    <string name="tc">Terms of Use &amp; Informed Consent </string>
    <string name="getfree">Get Free Visits!</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="addreferal">Add Referral Source</string>
    <string name="updateemail">Update Email &amp; Password</string>
    <string name="updatename">Update Name &amp; Address</string>
    <string name="updatepayment">Update Payment Method</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="Feedback">Feedback</string>
    <string name="SignOut">Sign Out</string>
</resources>