<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.visirx.patient.customview.MediumFont

        android:id="@+id/alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_visirx"
        android:contentDescription="@string/app_name"
        android:gravity="left"
        android:padding="10sp"
        android:paddingBottom="@dimen/alert_head_bottom"
        android:paddingLeft="@dimen/alert_head_left"
        android:paddingTop="@dimen/alert_head_top"
        android:text="@string/confirm_action"
        android:textColor="@color/White"/>

    <com.visirx.patient.customview.NormalFont
        android:id="@+id/cancel_apponitment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/alert_dialog"
        android:layout_margin="10dp"
        android:paddingBottom="@dimen/des_head_bottom"
        android:paddingLeft="@dimen/des_head_left"
        android:paddingTop="@dimen/des_head_top"
        android:text="@string/attach_Doctor">

    </com.visirx.patient.customview.NormalFont>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:paddingBottom="20dp">

        <com.visirx.patient.customview.NormalFont
            android:id="@+id/cancel_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/no_margin_right"
            android:background="@drawable/mybutton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="No"
            android:textColor="@color/White"/>

        <com.visirx.patient.customview.NormalFont
            android:id="@+id/cancel_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/yes_margin_right"
            android:background="@drawable/mybutton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="YES"
            android:textColor="@color/White"/>
    </LinearLayout>

</LinearLayout>